--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,49 @@ body
 {
     background: rgb(59, 79, 255);
 }
+
+header{
+    background: white;
+}
+
+h1 {
+    color: yellow ;
+}
+
+.micolor{
+    color: blue;
+    text-align: center;
+}
+
+.fuente {
+    font-family:'Times New Roman', Times, serif;
+}
+
+.caja{
+    border-top: 4px solid;
+    border-right: 2px solid;
+    border-bottom: 6px solid;
+    border-left: 8px solid;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 40px;
+    padding-right: 50px;
+    margin-top: 50px;
+    margin-right: 80px;
+    margin-bottom: 100px;
+    margin-left: 40px;
+    font-family: Roboto;
+}
+
+#miid {
+        color: white;
+}
+.formulario{
+    margin-top: 30px;
+    margin-left: 50px;
+}
+.dato{
+    width: 80%;
+    height: 50px;
+    }
+    
