--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,72 @@
+/* reseteo de margen y relleno las etiquetas*/
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+}
+
 body 
 {
-    background: rgb(59, 79, 255);
+    background: rgb(49, 69, 252);
 }
 
-header{
+.header{
+    background: rgb(8, 6, 6);
+    color: rgb(12, 8, 8);
+    height: 140px;
+    margin-bottom: 10px;
+}
+.margen{
+    width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+.logo{
+    text-transform: uppercase;
+}
+.logo a{
+    text-decoration: none;
+    color: black; 
+}
+
+.navbar{
+    background: black;
+    color: white;
+}
+.navbar ul {
+    text-align: right;
+}
+.navbar ul li{
+    display: inline-block;
+}
+.navbar ul a{
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    color: white;
+
+}
+.navbar ul li a:hover {
     background: white;
+    color: rgb(13, 6, 117);
+
+}
+#portada {
+    width: 70%;
+    background: rgb(1, 0, 82);
+    padding: 1.6em;
+    box-sizing: border-box;
+
+}
+.destacado, .default{
+    background: white;
+    padding: 0.7em;
 }
 
-h1 {
-    color: yellow ;
-}
 
 .micolor{
     color: blue;
