--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,17 @@ html{
 
 body 
 {
-    background: rgb(64, 64, 240) ;
+    background-image: url(/imagenes/fondopantallaazul.jpg) ;
+    
+    background-size: 100vw 100vh; 
+    /* 100vw y 100vh la imagen escala hasta 100%de alto y de ancho */
+    background-attachment: fixed;
+    /* imagen fija */
+
+    /* cambiar la posicion del body a relative para que el footer se mantenga absoluto */
+    position: relative;  
+    padding-bottom: 10em;
+    min-height: 100vh;
 }
 
 .header{
@@ -71,6 +81,7 @@ body
 .micolor{
     color: rgb(0, 0, 56);
     text-align: center;
+   
 }
 
 .fuente {
@@ -93,17 +104,49 @@ body
     font-family: Roboto;
  }
 
-#miid {
-        color: white;
-}
+
 .formulario{
-    margin-top: 30px;
-    margin-left: 50px;
+    width: 450px;
+    margin: auto;
+    background: rgba(0,0, 0, 0.4);
+    padding: 10px 20px;
+    margin-top: 20px;
+    border-radius: 7px;
 }
-.dato{
-    width: 80%;
-    height: 50px;
+
+.hform{
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-family: monospace;
+}
+
+input, textarea {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border: none;
+}
+
+textarea {
+    min-height: 100px;
+    max-height: 200px;
+    max-width: 100%;
+}
+
+#boton {
+    background: rgb(8, 6, 6) ;
+    color: white;
+    padding: 20px;
     }
+
+#boton:hover {
+    cursor:pointer;
+}
+
 
 .discografia{
 background-color: black;
@@ -169,6 +212,17 @@ justify-content: center;
     background-color:#c3fafc;
     }    
 
+.footer{
+    background-color: rgb(8, 6, 6);
+    color: white;
+    padding: 1em 0;
+    text-align: center;
+    /* hacer que el footer se mantenga en la parte inferior */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 /*responsive */
 @media screen and (min-width: 0px) and (max-width: 700px) { 
     .header{
@@ -180,5 +234,8 @@ justify-content: center;
     body{
         background: red;
     }
-
+    form{
+        width: 100%;
+    }
+}
    
